@@ -1,7 +1,6 @@
 package org.gol.gphotosync.domain.local.library;
 
 import io.vavr.Tuple;
-import io.vavr.control.Try;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.gol.gphotosync.domain.local.LocalAlbumFilter;
@@ -15,9 +14,9 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.List;
 
+import static io.vavr.control.Try.withResources;
 import static java.lang.String.format;
 import static java.util.Comparator.comparing;
-import static java.util.stream.Collectors.toList;
 import static org.gol.gphotosync.domain.util.ImageUtils.getImageMimeType;
 
 @Slf4j
@@ -30,7 +29,8 @@ class LocalStorageLibraryService implements LocalLibraryPort {
 
     @Override
     public List<LocalAlbum> findAlbums() {
-        return Try.of(() -> Files.walk(libraryProperties.getPath())
+        return withResources(() -> Files.walk(libraryProperties.getPath()))
+                .of(pathStream -> pathStream
                         .filter(Files::isDirectory)
                         .filter(this::containsImages)
                         .sorted()
@@ -39,7 +39,7 @@ class LocalStorageLibraryService implements LocalLibraryPort {
                                 .title(path.getFileName().toString())
                                 .build())
                         .filter(this::fulfillAllFilters)
-                        .collect(toList()))
+                        .toList())
                 .getOrElse(List.of());
     }
 
@@ -49,14 +49,16 @@ class LocalStorageLibraryService implements LocalLibraryPort {
     }
 
     private boolean containsImages(Path directory) {
-        return Try.of(() -> Files.list(directory)
+        return withResources(() -> Files.list(directory))
+                .of(pathStream -> pathStream
                         .anyMatch(ImageUtils::isImage))
                 .getOrElse(false);
     }
 
     private List<LocalImage> getAllAlbumImages(Path albumDirectory) {
         log.trace("Collecting images: albumDirectory={}", albumDirectory);
-        var images = Try.of(() -> Files.list(albumDirectory)
+        var images = withResources(() -> Files.list(albumDirectory))
+                .of(pathStream -> pathStream
                         .map(path -> Tuple.of(path, getImageMimeType(path)))
                         .filter(t -> t._2.isPresent())
                         .map(t -> LocalImage.builder()
@@ -66,7 +68,7 @@ class LocalStorageLibraryService implements LocalLibraryPort {
                                 .description(format("%s: %s", albumDirectory.getFileName(), t._1.getFileName()))
                                 .build())
                         .sorted(comparing(LocalImage::fileName))
-                        .collect(toList()))
+                        .toList())
                 .getOrElse(List.of());
         log.trace("Collected images: albumDirectory={}, imagesCount={}", albumDirectory, images.size());
         return images;
