@@ -9,6 +9,7 @@ import org.gol.gphotosync.domain.local.LocalLibraryPort;
 import org.gol.gphotosync.domain.model.AlbumSyncResult;
 import org.gol.gphotosync.domain.model.LocalAlbum;
 import org.gol.gphotosync.domain.model.LocalImage;
+import org.gol.gphotosync.domain.model.UploadStat;
 import org.gol.gphotosync.domain.remote.RemoteAlbumPort;
 import org.gol.gphotosync.domain.remote.RemoteImagePort;
 import org.gol.gphotosync.domain.sync.Synchronizer;
@@ -17,12 +18,14 @@ import java.util.Collection;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.Callable;
+import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ExecutorService;
-import java.util.concurrent.Future;
 import java.util.function.Function;
+import java.util.function.Supplier;
 
 import static com.google.common.collect.Lists.partition;
 import static java.util.Optional.ofNullable;
+import static java.util.concurrent.CompletableFuture.supplyAsync;
 import static java.util.function.Function.identity;
 import static java.util.function.Predicate.not;
 import static java.util.stream.Collectors.*;
@@ -48,8 +51,8 @@ class AlbumSynchronizer implements Synchronizer<AlbumSyncResult>, Callable<Album
     private List<List<LocalImage>> missingImagesPartitions;
 
     @Override
-    public Future<AlbumSyncResult> invoke() {
-        return albumSyncExecutor.submit(this);
+    public CompletableFuture<AlbumSyncResult> invoke() {
+        return supplyAsync(this::call, albumSyncExecutor);
     }
 
     @Override
@@ -77,7 +80,10 @@ class AlbumSynchronizer implements Synchronizer<AlbumSyncResult>, Callable<Album
                 .map(this::linkUploadedImagesToAlbum)
                 .map(Map::entrySet)
                 .flatMap(Collection::stream)
-                .collect(groupingBy(Map.Entry::getKey, summingLong(Map.Entry::getValue)));
+                .collect(groupingBy(Map.Entry::getKey, summingLong(Map.Entry::getValue)))
+                .entrySet().stream()
+                .map(e -> new UploadStat(e.getKey(), e.getValue()))
+                .toList();
         albumSyncResultBuilder.uploadStats(uploadResult);
         return albumSyncResultBuilder.build();
     }
@@ -97,7 +103,7 @@ class AlbumSynchronizer implements Synchronizer<AlbumSyncResult>, Callable<Album
     private void locateMissingImages() {
         var missingImages = localImages.stream()
                 .filter(not(img -> googleImages.contains(img.fileName())))
-                .collect(toList());
+                .toList();
         albumSyncResultBuilder.missingImages(missingImages.size());
         missingImagesPartitions = partition(missingImages, partitionSize);
         if (isEmpty(missingImages)) {
@@ -113,16 +119,15 @@ class AlbumSynchronizer implements Synchronizer<AlbumSyncResult>, Callable<Album
     }
 
     private List<NewMediaItem> uploadMissingImages(List<LocalImage> images) {
-        Function<LocalImage, Callable<NewMediaItem>> toUploadTask = localImage ->
+        Function<LocalImage, Supplier<NewMediaItem>> toUploadTask = localImage ->
                 () -> remoteImage.uploadImage(localImage);
         var uploadTasks = images.stream()
                 .map(toUploadTask)
-                .collect(toList());
-        return Try.of(() -> uploadExecutor.invokeAll(uploadTasks))
-                .get()
-                .stream()
-                .map(f -> Try.of(f::get).get())
-                .collect(toList());
+                .map(task -> supplyAsync(task, uploadExecutor))
+                .toList();
+        return uploadTasks.stream()
+                .map(CompletableFuture::join)
+                .toList();
     }
 
     private Map<String, Long> linkUploadedImagesToAlbum(List<NewMediaItem> uploadedImages) {
